Avoid unchanged commodity event-mod map lookups